--- a/css/base.css
+++ b/css/base.css
@@ -4,3 +4,17 @@ body{
     font-family: Arial, sans-serif;
     background-color: #F8FAFC;
 }
+
+.main-button {
+    background-color: var(--primary-color);
+    color: white;
+    padding: 15px 30px;
+    border: none;
+    border-radius: 8px;
+    font-weight: bold;
+}
+
+.page-title {
+    border-left: 5px solid var(--primary-color);
+    padding-left: 10px;
+}
